--- a/businesspartnersreportlist/webapp/test/flpSandbox.html
+++ b/businesspartnersreportlist/webapp/test/flpSandbox.html
@@ -65,9 +65,9 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"ns.businesspartners": "../"}'
+        data-sap-ui-resourceroots='{"ns.businesspartnersreportlist": "../"}'
         data-sap-ui-frameOptions="allow"
-        data-sap-ui-flexibilityServices='[{"applyConnector":"ns/businesspartners/test/changes_loader", "custom":true}, {"connector": "LocalStorageConnector"}]'>
+        data-sap-ui-flexibilityServices='[{"applyConnector":"ns/businesspartnersreportlist/test/changes_loader", "custom":true}, {"connector": "LocalStorageConnector"}]'>
     </script>
     <script id="locate-reuse-libs" src="./locate-reuse-libs.js" data-sap-ui-manifest-uri="../manifest.json">
     </script>
