--- a/businesspartnersreportlist/webapp/index.html
+++ b/businesspartnersreportlist/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "ns.businesspartners": "./"
+            "ns.businesspartnersreportlist": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="ns.businesspartners"
+        data-name="ns.businesspartnersreportlist"
         data-id="container"
-        data-settings='{"id" : "ns.businesspartners"}'
+        data-settings='{"id" : "ns.businesspartnersreportlist"}'
         data-handle-validation="true"
     ></div>
 </body>
